
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".register_login_activitys.PhoneRegisterActivity">


<Button
    android:id="@+id/btnSubmitVerifyCode"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/btn_verify"
    android:padding="8dp"
    android:text="@string/submit_verification_code"
    android:textAllCaps="false"
    android:textColor="#fff"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber"
    app:layout_constraintVertical_bias="0.171"
    android:visibility="invisible"/>

<EditText
    android:id="@+id/etVerificationCode"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/inputs"
    android:drawableStart="@drawable/password"
    android:inputType="textPersonName"
    android:padding="8dp"
    android:textAllCaps="false"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/btnSendVerifyCode"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvVerifyInfoOne"
    app:layout_constraintVertical_bias="0.0"
    android:visibility="invisible"
    android:maxLength="18"/>

<TextView
    android:id="@+id/tvVerifyInfoTwo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="80dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:text="@string/phone_verify_sms"
    android:textColor="#000"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:visibility="invisible"/>

<TextView
    android:id="@+id/tvVerifyInfoOne"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:padding="8dp"
    android:text="@string/please_patient"
    android:textColor="#000"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvVerifyInfoTwo"
    android:visibility="invisible"
    />

<EditText
    android:id="@+id/etPhoneNumber"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="32dp"
    android:background="@drawable/inputs"
    android:drawableStart="@drawable/phone"
    android:hint="@string/my_phone_number"
    android:inputType="phone"
    android:padding="8dp"
    android:textAllCaps="false"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/btnSendVerifyCode"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/spCodeOptions"
    app:layout_constraintTop_toBottomOf="@+id/tvPhoneInfo"
    app:layout_constraintVertical_bias="1.0"
    android:maxLength="18"/>

<TextView
    android:id="@+id/tvPhoneInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="60dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:text="@string/phone_verify_btn"
    android:textColor="#000"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

<Button
    android:id="@+id/btnSendVerifyCode"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="288dp"
    android:background="@drawable/btn_verify"
    android:padding="8dp"
    android:text="@string/send_verification_code"
    android:textAllCaps="false"
    android:textColor="#fff"
    android:textSize="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

<Spinner
    android:id="@+id/spCodeOptions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:spinnerMode="dropdown"
    app:layout_constraintBottom_toBottomOf="@+id/etPhoneNumber"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/etPhoneNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>