<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity"
    android:background="@drawable/settings_background">


    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/civSetProfileImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/profile_img"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSetUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/edit_profilepng"
        android:hint="@string/username"
        android:inputType="textMultiLine"
        android:padding="6dp"
        android:paddingEnd="40dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civSetProfileImage"
        tools:ignore="RtlSymmetry"
        android:maxLength="18"/>


    <EditText
        android:id="@+id/etSetStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/edit_status"
        android:hint="@string/user_status"
        android:inputType="textMultiLine"
        android:padding="6dp"
        android:paddingEnd="12dp"
        android:text="@string/currently_available"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSetUserName"
        tools:ignore="RtlSymmetry"
        android:maxLength="36"/>

    <Button
        android:id="@+id/btnUpdateUserSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttons"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="#eee"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSetStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>